--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,7 +4,15 @@ port: 6667
 
 # What messages from EIRC will look like in the game
 # Supports Kyori's components (read more at https://docs.advntr.dev/text.html)
-chat-format: "[EIRC] <user> - <message>"
+# message-format - for user messages
+# session-format - for join/leave messages
+message-format: "[EIRC] <user> - <message>"
+session-format: "[EIRC] <user> <status>"
+
+# Under what name messages will be sent to other users
+# Use <user> placeholder to put player's name
+player-name-format: "[MC] <user>"
 
 # Client encryption key
-encryption-key: ""
+# Generate new one using real client
+security-key: ""
